syntax = "proto3";

package trackbox.trackings.v1;
option go_package = "github.com/BearBump/TrackBox/internal/pb/trackings_api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "models/tracking_model.proto";

service TrackingsService {
  rpc CreateTrackings(CreateTrackingsRequest) returns (CreateTrackingsResponse) {
    option (google.api.http) = {
      post: "/trackings"
      body: "*"
    };
  }

  rpc GetTrackingsByIds(GetTrackingsByIdsRequest) returns (GetTrackingsByIdsResponse) {
    option (google.api.http) = {
      post: "/trackings/get-by-ids"
      body: "*"
    };
  }

  rpc ListTrackingEvents(ListTrackingEventsRequest) returns (ListTrackingEventsResponse) {
    option (google.api.http) = {
      get: "/trackings/{tracking_id}/events"
    };
  }

  rpc RefreshTracking(RefreshTrackingRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/trackings/{tracking_id}/refresh"
      body: "*"
    };
  }
}

message CreateTrackingsRequest {
  repeated trackbox.models.v1.TrackingCreateInput items = 1;
}

message CreateTrackingsResponse {
  repeated trackbox.models.v1.Tracking trackings = 1;
}

message GetTrackingsByIdsRequest {
  repeated uint64 ids = 1;
}

message GetTrackingsByIdsResponse {
  repeated trackbox.models.v1.Tracking trackings = 1;
}

message ListTrackingEventsRequest {
  uint64 tracking_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListTrackingEventsResponse {
  repeated trackbox.models.v1.TrackingEvent events = 1;
}

message RefreshTrackingRequest {
  uint64 tracking_id = 1;
}


